# serializer version: 1
# name: test_attach_analysis_files[False]
  dict({
    '_id': 'foobar',
    'files': list([
    ]),
    'ready': True,
  })
# ---
# name: test_attach_analysis_files[True]
  dict({
    '_id': 'foobar',
    'files': list([
      dict({
        'analysis': 'foobar',
        'description': None,
        'format': 'fasta',
        'id': 1,
        'name': 'reference-fa',
        'name_on_disk': '1-reference-fa',
        'size': None,
        'uploaded_at': None,
      }),
    ]),
    'ready': True,
  })
# ---
